fixed waypoint jumping

--- a/src/styl/modules/project.styl
+++ b/src/styl/modules/project.styl
@@ -88,8 +88,9 @@ li.browser-chrome
 	.waypoint-child
 		position absolute
 		left 50%
+		right 0
 		top 0
-		width 38%
+		width 700px
 		margin-bottom 0 !important
 		&.is-fixed
 			position fixed
